test/basic/good/core004.lat
int main(){
	int x = 42;
	string y;
	y = "asdf";
	x++;
	x--;
	return 0;
}
