test/basic/bad/core009.lat
int main() {
	string y;
	x++;
	x--;
	y++;
	y--;
	return 0;
}
